fix the Research shifting page BUG

--- a/src/Components/Research-page/Research tools/index.module.css
+++ b/src/Components/Research-page/Research tools/index.module.css
@@ -1,11 +1,21 @@
-.slideInText {
-  opacity: 0;
-  transform: translateX(50%);
-  transition: opacity 0.5s ease-in-out, transform 0.8s ease-in-out;
+@keyframes slideInOut {
+  0% {
+    transform: translateX(0);
+    opacity: 0;
+  }
+  50% {
+    transform: translateX(50%);
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
-.slideInText.active {
-  opacity: 1;
-  transform: translateX(0);
+
+.slideInText {
+  opacity: 0; 
+  animation: slideInOut 0.8s ease-in-out forwards;  
 }
 
 .mainSection {
